# basic_cpp_with_deps

./: CMakeLists.txt  README.md  main.cpp
